# deproject2

./: Cargo.toml  perf.sh
deproject-io/: Cargo.toml
deproject-io/src/: lib.rs  realsense.rs  realsense_utils.rs
deproject-lib/: Cargo.toml
deproject-ui/: Cargo.toml
deproject-ui/src/: camera.rs  main.rs  vertex.rs  view3d.rs
deproject-ui/src/shaders/: pointcloud.vert
src/: camera.rs  main.rs  shapes.rs
src/shaders/: lines.frag  lines.vert
